--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <!--Use the for attribute todo-1 to link the checkbox to the label-->
           <label class="custom-checkbox" for="todo-1">
             <svg
+              fill="transparent"
               xmlns="http://www.w3.org/2000/svg"
               height="24px"
               viewBox="0 -960 960 960"
@@ -45,6 +46,7 @@
           </label>
           <button class="delete-button">
             <svg
+              fill="var(--secondary-color)"
               xmlns="http://www.w3.org/2000/svg"
               height="24px"
               viewBox="0 -960 960 960"
@@ -62,6 +64,7 @@
           <!--Use the for attribute todo-1 to link the checkbox to the label-->
           <label class="custom-checkbox" for="todo-2">
             <svg
+              fill="transparent"
               xmlns="http://www.w3.org/2000/svg"
               height="24px"
               viewBox="0 -960 960 960"
@@ -76,6 +79,7 @@
           </label>
           <button class="delete-button">
             <svg
+              fill="var(--secondary-color)"
               xmlns="http://www.w3.org/2000/svg"
               height="24px"
               viewBox="0 -960 960 960"
@@ -93,6 +97,7 @@
           <!--Use the for attribute todo-1 to link the checkbox to the label-->
           <label class="custom-checkbox" for="todo-3">
             <svg
+              fill="transparent"
               xmlns="http://www.w3.org/2000/svg"
               height="24px"
               viewBox="0 -960 960 960"
@@ -107,6 +112,7 @@
           </label>
           <button class="delete-button">
             <svg
+              fill="var(--secondary-color)"
               xmlns="http://www.w3.org/2000/svg"
               height="24px"
               viewBox="0 -960 960 960"
